@@ -235,6 +235,7 @@ public final class DOMSettingsBuilder {
         // serial connection
         IIOMetadataNode serial = new IIOMetadataNode("serial");
         serial.setAttribute("port", settings.getLoggerPortDefault());
+        serial.setAttribute("scan", String.valueOf(settings.getScanMode()));
         loggerSettings.appendChild(serial);
 
         // window maximized
